--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "Programmatically build overpass queries. Powered by overpy packag
 authors = [{ name = "Sean Hwang", email = "your.email@example.com" }]
 requires-python = ">=3.8"
 dependencies = [
-    "overpy>=0.7"
+    "overpy>=0.7",
+    "pytest>=8.3.5"
 ]
 
 [build-system]
